--- a/docs/src/modules.dox
+++ b/docs/src/modules.dox
@@ -1,4 +1,4 @@
-
+ 
 /**
  * @defgroup   roc2_header roc2.h
  *
@@ -8,15 +8,13 @@
 /**
  * @defgroup   roc2_code roc2.c
  *
- * @brief This program is the first version of data collection software for the ROC2 Radio
- *	Occultation Instrument. It lacks the full feature set of the final instrument but
- *	performs the following:
+ * @brief  Data collection software for the ROC2 Radio Occultation Instrument. It performs the following:
  *	
- *	- Reads configuration file to determine commands for setting up GPS receiver
- *	- Configures GPS receiver
- *	- Launch data offload program
- *	- Logs data received from GPS receiver to files
- *	- When data file is closed, calls data processing script and open new file
+ * - Reads configuration file to determine commands for setting up GPS receiver
+ * - Configures GPS receiver
+ * - Launch data offload program
+ * - Logs data received from GPS receiver to files
+ * - When data file is closed, calls data processing script and open new file
  */
 
 /**
@@ -28,13 +26,9 @@
 /**
  * @defgroup   zephyr_code zephyr.c
  *
- * @brief This program is the first version of data collection software for the ROC2 Radio
- *	Occultation Instrument. It lacks the full feature set of the final instrument but
- *	performs the following:
- *	
- *	- Reads configuration file to determine commands for setting up GPS receiver
- *	- Configures GPS receiver
- *	- Launch data offload program
- *	- Logs data received from GPS receiver to files
- *	- When data file is closed, calls data processing script and open new file
+ * @brief Data collection software for the ROC2 Radio Occultation Instrument. It performs the following:
+ * 
+ * - Communicate with Zephyr Instrument: Respond to mode changes and controls GPS Low Power State
+ * - Transmits Data to Zephyr Instrument: Read Files from Queue folder, Send Data and Delete Files from Queue
+ * - Handle Telecommands: Receive TC Data packs, Perform TC action and echo results back to Zephyr Instrument
  */
